--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-        <div class="card">
-        <div class="container"></div>
+    <div class="container">
+      <div class="card">
         <h2 class="card-header">Nice card</h2>
-        <img class="card-img" src="vanilla 3.png" alt="card thing" />
+        <img class="card-img" src="vanilla 3.png" alt="card image" />
         <h3 class="card-price">4.99</h3>
-      </body>
-    </html>
-
-
-
+      </div>
+      <div class="card">
+        <h2 class="card-header">Nice card</h2>
+        <img class="card-img" src="vanilla 3.png" alt="card image" />
+        <h3 class="card-price">4.99</h3>
+      </div>
+  </body>
+</html>
