--- a/index.html
+++ b/index.html
@@ -7,19 +7,63 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <div class="card">
-        <h2 class="card-header">Nice card</h2>
-        <img class="card-img" src="vanilla 3.png" alt="card image" />
-        <h3 class="card-price">4.99</h3>
+        <h2 class="card-header">bulbasaur</h2>
+        <img class="card-img" src="../images/bulbasaur.png" alt="pokemon" />
+        <h3 class="card-number">#001</h3>
+      </div>
+
+      <div class="card">
+        <h2 class="card-header">ivysaur</h2>
+        <img class="card-img" src="../images/ivysaur.png" alt="pokemon" />
+        <h3 class="card-number">#002</h3>
       </div>
       <div class="card">
-        <h2 class="card-header">Nice card</h2>
-        <img class="card-img" src="vanilla 3.png" alt="card image" />
-        <h3 class="card-price">4.99</h3>
+        <h2 class="card-header">venusaur</h2>
+        <img class="card-img" src="../images/venusaur.png" alt="pokemon" />
+        <h3 class="card-number">#003</h3>
       </div>
+      <div class="card">
+        <h2 class="card-header">charmander</h2>
+        <img class="card-img" src="../images/charmander.png" alt="pokemon" />
+        <h3 class="card-number">#004</h3>
+      </div>
+      <div class="card">
+        <h2 class="card-header">charmeleon</h2>
+        <img class="card-img" src="../images/charmeleon.png" alt="pokemon" />
+        <h3 class="card-number">#005</h3>
+      </div>
+      <div class="card">
+        <h2 class="card-header">charizard</h2>
+        <img class="card-img" src="../images/charizard.png" alt="pokemon" />
+        <h3 class="card-number">#006</h3>
+      </div>
+      <div class="card">
+        <h2 class="card-header">squirtle</h2>
+        <img class="card-img" src="../images/squirtle.png" alt="pokemon" />
+        <h3 class="card-number">#007</h3>
+      </div>
+      <div class="card">
+        <h2 class="card-header">wartortle</h2>
+        <img class="card-img" src="../images/wartortle.png" alt="pokemon" />
+        <h3 class="card-number">#008</h3>
+      </div>
+      <div class="card">
+        <h2 class="card-header">blastoise</h2>
+        <img class="card-img" src="../images/blastoise.png" alt="pokemon" />
+        <h3 class="card-number">#009</h3>
+      </div>
+    </div>
   </body>
 </html>
