--- a/index.html
+++ b/index.html
@@ -13,56 +13,67 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-
+    <h1 class="header">Generation 1 starters</h1>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div class="container">
       <div class="card">
         <h2 class="card-header">bulbasaur</h2>
         <img class="card-img" src="../images/bulbasaur.png" alt="pokemon" />
         <h3 class="card-number">#001</h3>
+        <div class="card_content"></div>
       </div>
 
       <div class="card">
         <h2 class="card-header">ivysaur</h2>
         <img class="card-img" src="../images/ivysaur.png" alt="pokemon" />
         <h3 class="card-number">#002</h3>
+        <div class="card_content"></div>
       </div>
+
       <div class="card">
         <h2 class="card-header">venusaur</h2>
         <img class="card-img" src="../images/venusaur.png" alt="pokemon" />
         <h3 class="card-number">#003</h3>
+        <div class="card_content"></div>
       </div>
       <div class="card">
         <h2 class="card-header">charmander</h2>
         <img class="card-img" src="../images/charmander.png" alt="pokemon" />
         <h3 class="card-number">#004</h3>
+        <div class="card_content"></div>
       </div>
       <div class="card">
         <h2 class="card-header">charmeleon</h2>
         <img class="card-img" src="../images/charmeleon.png" alt="pokemon" />
         <h3 class="card-number">#005</h3>
+        <div class="card_content"></div>
       </div>
       <div class="card">
         <h2 class="card-header">charizard</h2>
         <img class="card-img" src="../images/charizard.png" alt="pokemon" />
         <h3 class="card-number">#006</h3>
+        <div class="card_content"></div>
       </div>
       <div class="card">
         <h2 class="card-header">squirtle</h2>
         <img class="card-img" src="../images/squirtle.png" alt="pokemon" />
         <h3 class="card-number">#007</h3>
+        <div class="card_content"></div>
       </div>
       <div class="card">
         <h2 class="card-header">wartortle</h2>
         <img class="card-img" src="../images/wartortle.png" alt="pokemon" />
         <h3 class="card-number">#008</h3>
+        <div class="card_content"></div>
       </div>
       <div class="card">
         <h2 class="card-header">blastoise</h2>
         <img class="card-img" src="../images/blastoise.png" alt="pokemon" />
         <h3 class="card-number">#009</h3>
+        <div class="card_content"></div>
       </div>
     </div>
   </body>
