--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <img class="card-img" src="../images/bulbasaur.png" alt="pokemon" />
         <h3 class="card-number">#001</h3>
         <div class="card_content"></div>
+        <div class=""></div>
       </div>
 
       <div class="card">
