--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
 
   <body>
     <div class="container">
-      <div class="card">
+      <div class="card1">
         <h2 class="card-header">bulbasaur</h2>
-        <img class="card-img" src="../images/bulbasaur.png" alt="pokemon" />
+        <img class="card-img1" src="../images/bulbasaur.png" alt="pokemon" />
         <h3 class="card-number">#001</h3>
         <div class="card_content"></div>
-        <div class=""></div>
       </div>
 
-      <div class="card">
+      <div class="card2">
         <h2 class="card-header">ivysaur</h2>
-        <img class="card-img" src="../images/ivysaur.png" alt="pokemon" />
+        <img class="card-img2" src="../images/ivysaur.png" alt="pokemon" />
         <h3 class="card-number">#002</h3>
         <div class="card_content"></div>
       </div>
