--- a/index.html
+++ b/index.html
@@ -15,43 +15,49 @@
     />
     <h1 class="header">Generation 1 starters</h1>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <div class="container">
-      <div class="card1">
+      <div class="card" id="bulb">
         <h2 class="card-header">bulbasaur</h2>
-        <img class="card-img1" src="../images/bulbasaur.png" alt="pokemon" />
+        <img class="card-img" src="../images/bulbasaur.png" alt="pokemon" />
         <h3 class="card-number">#001</h3>
         <div class="card_content"></div>
       </div>
 
-      <div class="card2">
+      <div class="card" id="ivy">
         <h2 class="card-header">ivysaur</h2>
-        <img class="card-img2" src="../images/ivysaur.png" alt="pokemon" />
+        <img class="card-img" src="../images/ivysaur.png" alt="pokemon" />
         <h3 class="card-number">#002</h3>
         <div class="card_content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="ven">
         <h2 class="card-header">venusaur</h2>
         <img class="card-img" src="../images/venusaur.png" alt="pokemon" />
         <h3 class="card-number">#003</h3>
         <div class="card_content"></div>
       </div>
-      <div class="card">
+      <div class="card" id="char">
         <h2 class="card-header">charmander</h2>
         <img class="card-img" src="../images/charmander.png" alt="pokemon" />
         <h3 class="card-number">#004</h3>
         <div class="card_content"></div>
       </div>
-      <div class="card">
+      <div class="card" id="charm">
         <h2 class="card-header">charmeleon</h2>
         <img class="card-img" src="../images/charmeleon.png" alt="pokemon" />
         <h3 class="card-number">#005</h3>
         <div class="card_content"></div>
       </div>
-      <div class="card">
+      <div class="card" id="charz">
         <h2 class="card-header">charizard</h2>
         <img class="card-img" src="../images/charizard.png" alt="pokemon" />
         <h3 class="card-number">#006</h3>
