--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
         <h3 class="card-number">#006</h3>
         <div class="card_content"></div>
       </div>
-      <div class="card">
+      <div class="card" id="squirtle">
         <h2 class="card-header">squirtle</h2>
         <img class="card-img" src="../images/squirtle.png" alt="pokemon" />
         <h3 class="card-number">#007</h3>
         <div class="card_content"></div>
       </div>
-      <div class="card">
+      <div class="card" id="wartortle">
         <h2 class="card-header">wartortle</h2>
         <img class="card-img" src="../images/wartortle.png" alt="pokemon" />
         <h3 class="card-number">#008</h3>
         <div class="card_content"></div>
       </div>
-      <div class="card">
+      <div class="card" id="blastoise">
         <h2 class="card-header">blastoise</h2>
         <img class="card-img" src="../images/blastoise.png" alt="pokemon" />
         <h3 class="card-number">#009</h3>
