--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>flex box</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+
     <h1 class="header">Generation 1 starters</h1>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,57 +24,48 @@
         <h2 class="card-header">bulbasaur</h2>
         <img class="card-img" src="../images/bulbasaur.png" alt="pokemon" />
         <h3 class="card-number">#001</h3>
-        <div class="card-content"></div>
       </div>
 
       <div class="card" id="ivy">
         <h2 class="card-header">ivysaur</h2>
         <img class="card-img" src="../images/ivysaur.png" alt="pokemon" />
         <h3 class="card-number">#002</h3>
-        <div class="card-content"></div>
       </div>
 
       <div class="card" id="ven">
         <h2 class="card-header">venusaur</h2>
         <img class="card-img" src="../images/venusaur.png" alt="pokemon" />
         <h3 class="card-number">#003</h3>
-        <div class="card-content"></div>
       </div>
       <div class="card" id="char">
         <h2 class="card-header">charmander</h2>
         <img class="card-img" src="../images/charmander.png" alt="pokemon" />
         <h3 class="card-number">#004</h3>
-        <div class="card-content"></div>
       </div>
       <div class="card" id="charm">
         <h2 class="card-header">charmeleon</h2>
         <img class="card-img" src="../images/charmeleon.png" alt="pokemon" />
         <h3 class="card-number">#005</h3>
-        <div class="card-content"></div>
       </div>
       <div class="card" id="charz">
         <h2 class="card-header">charizard</h2>
         <img class="card-img" src="../images/charizard.png" alt="pokemon" />
         <h3 class="card-number">#006</h3>
-        <div class="card-content"></div>
       </div>
       <div class="card" id="squirtle">
         <h2 class="card-header">squirtle</h2>
         <img class="card-img" src="../images/squirtle.png" alt="pokemon" />
         <h3 class="card-number">#007</h3>
-        <div class="card-content"></div>
       </div>
       <div class="card" id="wartortle">
         <h2 class="card-header">wartortle</h2>
         <img class="card-img" src="../images/wartortle.png" alt="pokemon" />
         <h3 class="card-number">#008</h3>
-        <div class="card-content"></div>
       </div>
       <div class="card" id="blastoise">
         <h2 class="card-header">blastoise</h2>
         <img class="card-img" src="../images/blastoise.png" alt="pokemon" />
         <h3 class="card-number">#009</h3>
-        <div class="card-content"></div>
       </div>
     </div>
   </body>
